# client

./: CMakeLists.txt  main.cpp
inc/: Client.h  Player.h  ReceivablePacket.h  SendablePacket.h
src/: Client.cpp  Player.cpp
src/network/client_packets/: RequestDate.h  RequestLogin.h  RequestOther.h  RequestTime.h
src/network/server_packets/: ExClient.h  ExDisconnect.h  ExLogin.h
